[pom] Add vm argument that will survive a fork so java 9 builds